# freeradius-server

./: .clang-format  .clangd  .ctags  .dockerignore  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .lldbinit  .shellcheckrc  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING  COPYRIGHT  CREDITS  INSTALL  INSTALL.md  INSTALL.rst  LICENSE  Make.inc.in  Makefile  Makefile.in  README  README.md  README.rst  SECURITY.md  VERSION  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  c  config.h.bot  config.h.in  config.h.top  configure  configure.ac  configure.in  database_setup.sql  (+13 more)
libltdl/: .gitignore  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  argz.c  argz_.h  config-h.in  configure  configure.ac  configure.in  ltdl.c  ltdl.h
libltdl/libltdl/: lt__private.h
libltdl/loaders/: dlopen.c
libltdl/m4/: argz.m4  ltdl.m4
src/lib/curl/: all.mk  all.mk.in  attrs.h  base.c  base.h  config.h.in  configure  configure.ac  io.c  xlat.c  xlat.h
src/lib/curl/m4/: libcurl_check_config.m4
src/lib/json/: .gitignore  all.mk  all.mk.in  base.h  config.h.in  configure  configure.ac  jpath.c  json.c  json.h  json_missing.c  json_missing.h
src/lib/kafka/: all.mk  all.mk.in  base.c  base.h  configure  configure.ac
src/lib/ldap/: all.mk  all.mk.in  base.c  base.h  bind.c  conf.c  conf.h  config.h.in  configure  configure.ac  connection.c  control.c  directory.c  edir.c  filter.c  ldap.h  libfreeradius-ldap.c  libfreeradius-ldap.h  map.c  referral.c  sasl.c  sasl_s.c  start_tls.c  state.c  sync.c  sync.h  util.c
src/modules/rlm_acctlog/: Makefile  Makefile.in  all.mk  all.mk.in  configure  configure.in  rlm_acctlog.c
src/modules/rlm_attr_rewrite/: Makefile.in  all.mk  configure  configure.in  rlm_attr_rewrite.c
src/modules/rlm_brotli/: README.md  all.mk  all.mk.in  configure  configure.ac  rlm_brotli.c
src/modules/rlm_cache/: Makefile  README.md  all.mk  all.mk.in  configure  configure.ac  rlm_cache.c  rlm_cache.h  rlm_cache.mk  serialize.c  serialize.h  stable
src/modules/rlm_cache/drivers/rlm_cache_htrie/: README.md  all.mk  rlm_cache_htrie.c
src/modules/rlm_cache/drivers/rlm_cache_memcached/: .gitignore  README.md  all.mk.in  configure  configure.ac  rlm_cache_memcached.c
src/modules/rlm_cache/drivers/rlm_cache_rbtree/: README.md  all.mk  rlm_cache_rbtree.c
src/modules/rlm_cache/drivers/rlm_cache_redis/: README.md  all.mk  configure  configure.ac  rlm_cache_redis.c
src/modules/rlm_checkval/: Makefile.in  all.mk  all.mk.in  config.h.in  configure  configure.in  rlm_checkval.c
src/modules/rlm_couchbase/: README.md  all.mk  all.mk.in  config.h.in  configure  configure.ac  couchbase.c  couchbase.config  couchbase.h  jsonc_missing.c  jsonc_missing.h  mod.c  mod.h  rlm_couchbase.c
src/modules/rlm_counter/: .gitignore  Makefile  Makefile.in  README.md  all.mk  all.mk.in  config.h.in  configure  configure.ac  configure.in  rad_counter  rad_counter.pl  rlm_counter.c
src/modules/rlm_dbm/: .gitignore  Makefile.in  all.mk  all.mk.in  configure  configure.in  rlm_dbm.c  rlm_dbm.mk  rlm_dbm_cat.8  rlm_dbm_cat.c  rlm_dbm_cat.mk  rlm_dbm_parse.8  rlm_dbm_parser.8  rlm_dbm_parser.c  rlm_dbm_parser.mk
src/modules/rlm_dotnet/: .gitignore  README.md  all.mk  all.mk.in  clrpath.h  configure  configure.ac  coreclrhost.h  rlm_dotnet.c  rlm_dotnet_hostfxr.h
src/modules/rlm_dotnet/FreeRadius.Example/: MainClass.cs
src/modules/rlm_eap/: .gitignore  Makefile  Makefile.in  README.md  all.mk  cache.c  cache.h  config.h.in  configure  configure.ac  configure.in  eap.c  eap.h  foo  mem.c  radeapclient.c  radeapclient.mk  rlm_eap.c  rlm_eap.h  rlm_eap.mk  serialize.h  state.c
src/modules/rlm_eap/lib/: all.mk
src/modules/rlm_eap/libeap/: Makefile  all.mk  cb.c  comp128.c  eap_chbind.c  eap_chbind.h  eap_sim.h  eap_tls.c  eap_tls.h  eap_types.h  eapcommon.c  eapcrypto.c  eapsimlib.c  fips186prf.c  mppe_keys.c  tls.c
src/modules/rlm_eap/types/: .gitignore  Makefile  lib  rules.mak
src/modules/rlm_example/: Makefile  Makefile.clean  Makefile.in  README.md  all.mk.in  config.h.in  configure  configure.ac  configure.in  other.c  other.h  rlm_example.c  selfconfig.m4
src/modules/rlm_idn/: README.md  all.mk.in  configure  configure.ac  configure.in  idn.h  rlm_idn.c
src/modules/rlm_ippool/: .gitignore  Makefile.in  README.md  acconfig.h  all.mk  all.mk.in  config.h.in  configure  configure.ac  configure.in  rlm_ippool.c  rlm_ippool.mk  rlm_ippool_tool.8  rlm_ippool_tool.c  rlm_ippool_tool.mk  rlm_ippool_tool.pod
src/modules/rlm_json/: README.md  all.mk  all.mk.in  config.h.in  configure  configure.ac  jpath.c  json.c  json.h  json_missing.c  json_missing.h  libfreeradius-json.mk  rlm_json.c  rlm_json.mk
src/modules/rlm_kafka/: README.md  all.mk  configure  configure.ac  rlm_kafka.c
src/modules/rlm_krb5/: Makefile  Makefile.in  README  README.md  all.mk  all.mk.in  configure  configure.ac  configure.in  heimdal-krb5.patch  krb5.c  krb5.h  rlm_krb5.c  selfconfig.m4
src/modules/rlm_ldap/: #rlm_ldap.c#  .gitignore  INSTALL  Makefile  Makefile.in  README.md  all.mk  all.mk.in  attrmap.c  clients.c  config.h.in  configure  configure.ac  configure.in  conn.c  control.c  directory.c  edir.c  edir_ldapext.c  groups.c  ldap.c  ldap.h  libfreeradius-ldap.mk.in  libldap.h  mapping.c  mapping.h  profile.c  rlm_ldap.c  rlm_ldap.h  rlm_ldap.mk  sasl.c  selfconfig.m4  user.c  util.c
src/modules/rlm_lua/: .gitignore  README.md  all.mk.in  aux.c  config.h.in  configure  configure.ac  example.lua  helper.c  libfreeradius-lua.mk.in  lua.c  lua.h  rlm_lua.c  rlm_lua.mk.in  util.c
src/modules/rlm_mruby/: README.md  all.mk.in  configure  configure.ac  example.rb  mruby.c  rlm_mruby.c  rlm_mruby.h
src/modules/rlm_mschap/: .gitignore  Makefile  README  README.md  all.mk  auth_wbclient.c  auth_wbclient.h  config.h.in  configure  configure.ac  configure.in  des.h  deskey.c  desport.c  md4.h  md4c.c  mschap.c  mschap.h  opendir.c  rfc2433.txt  rlm_mschap.c  rlm_mschap.h  rlm_mschap.mk  rlm_mschap.mk.in  sha1.c  smbdes.c  smbdes.h  smbencrypt.c  smbencrypt.mk  smbpass.c  smbpass.h
(+9200 files in other folders)
